fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,8 @@
 
 .App {
   text-align: center;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .App-logo {
